fix logout button getting overlapped

--- a/src/frontend/static/styles/home.css
+++ b/src/frontend/static/styles/home.css
@@ -48,11 +48,12 @@ body {
 	font-weight: bold;
 	padding-left: 15px;
 	padding-right: 15px;
-	position: absolute;
-	bottom: 20px;
-	left: 50%;
+	width: min-content;
+	/* position: absolute; */
+	/* bottom: 20px; */
+	/* left: 50%; */
 	font-size: 15px;
-	transform: translate(-50%);
+	/* transform: translate(-50%); */
 	border-radius: 60px;
 }
 
@@ -73,7 +74,7 @@ body {
 }
 
 .footer {
-    /* display: none; */
+	justify-items: center;
     position: absolute;
     text-align: center;
     width: 100%;
